--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-*{
-  /* height: 100vh; */
-}
+/* *{
+  padding: 0%;
+} */
