--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,6 +1,14 @@
-@media (max-width:576px) {
+/* @media (max-width:576px) {
     .paddingZero{
         padding: 0px;
     }
-    
+}   */
+
+
+@media only screen and (max-width: 576px) {
+    .paddingZero{
+        padding-left:0px;
+        margin: 0%;
+        color: brown;
+    }
 }
